--- a/index.html
+++ b/index.html
@@ -1,15 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, intitial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebStudio</title>
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <header>
+        <a href="./index.html">WebStudio</a>
+        <nav>
+            <ul>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="#">info@devstudio.com</a></li>
+            <li><a href="#">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button type="button">Замовити послугу</button>
+        </section>
+
+        <section>
+            <h3>Увага до деталей</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3>Пунктуальність</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3>Планування</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3>Сучасні технології</h3>
+            <p>Значимість цим проблем настільки очевидна, що реалізація планових завдань.</p>
+        </section>
+
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="img/com.jpg">
+                    <img src="img/comp.png">
+                    <img src="img/imag.jpg">
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Наша команда</h2>
+            <div style="display: flex; justify-content:space-between; align-items:center;">
+                <div>
+                    <img src="img/img.jpg" style="height: 260px;">
+                    <div>
+                        <p>Ігор Дем'яненко</p>
+                        <p>Product Desinger</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="img/img-1.jpg" style="height: 260px;">
+                    <div>
+                        <p>Ольга Рєпіна</p>
+                        <p>Frontend Developer</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="img/img-2.jpg" style="height: 260px;">
+                    <div>
+                        <p>Микола Тарасов</p>
+                        <p>Marketing</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="img/img-3.jpg"style="height: 260px;">
+                    <div>
+                        <p>Михайло Єрмаков</p>
+                        <p>Ul Desinger</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <h2><span style="color: blue;">Web</span>Studio</h2>
+        <p>м.Київ, пр-т Лесі України, 26</p>
+        <p>info@devstudio.com</p>
+        <p>+38 096 111 11 11</p>
+    </footer>
+    
 </body>
 
 </html>
