--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html">
+            <h2><span style="color: blue;">Web</span>Studio</h2></a>
         <nav>
             <ul>
                 <li><a href="#">Студія</a></li>
@@ -31,67 +32,67 @@
         </section>
 
         <section>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цим проблем настільки очевидна, що реалізація планових завдань.</p>
+            <ul>
+                <li>
+                    <h3>Увага до деталей</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3>Пунктуальність</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3>Планування</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3>Сучасні технології</h3>
+                    <p>Значимість цим проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
         </section>
 
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="img/com.jpg">
-                    <img src="img/comp.png">
-                    <img src="img/imag.jpg">
+                    <img src="img/com.jpg" alt="Кольори кодів" width="250">
+                    <img src="img/comp.jpg" alt="Розробка додатків для телефонів" width="250">
+                    <img src="img/imag.jpg" alt="Написання проекту" width="250">
                 </li>
             </ul>
         </section>
 
         <section>
             <h2>Наша команда</h2>
-            <div style="display: flex; justify-content:space-between; align-items:center;">
-                <div>
-                    <img src="img/img.jpg" style="height: 260px;">
-                    <div>
-                        <p>Ігор Дем'яненко</p>
-                        <p>Product Desinger</p>
-                    </div>
-                </div>
-                <div>
-                    <img src="img/img-1.jpg" style="height: 260px;">
-                    <div>
-                        <p>Ольга Рєпіна</p>
-                        <p>Frontend Developer</p>
-                    </div>
-                </div>
-                <div>
-                    <img src="img/img-2.jpg" style="height: 260px;">
-                    <div>
-                        <p>Микола Тарасов</p>
-                        <p>Marketing</p>
-                    </div>
-                </div>
-                <div>
-                    <img src="img/img-3.jpg"style="height: 260px;">
-                    <div>
-                        <p>Михайло Єрмаков</p>
-                        <p>Ul Desinger</p>
-                    </div>
-                </div>
-            </div>
+            <ul>
+                <li>
+                    <img src="img/img.jpg" alt="Чоловік в окулярах та в чорній футболці" width="270">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Desinger</p>
+                </li>
+                <li>
+                    <img src="img/img-1.jpg" alt="Усміхненний чоловік в білій сорочці" width="270">
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="img/img-2.jpg" alt="Гарна білявка в окулярах" width="270">
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="img/img-3.jpg" alt="Чоловік в окулярах та бордовій сорочці" width="270">
+                    <h3>Михайло Єрмаков</h3>
+                    <p>Ul Desinger</p>
+                </li>
+            </ul>
         </section>
     </main>
 
     <footer>
         <h2><span style="color: blue;">Web</span>Studio</h2>
-        <p>м.Київ, пр-т Лесі України, 26</p>
-        <p>info@devstudio.com</p>
-        <p>+38 096 111 11 11</p>
+        <address>
+            <p>м.Київ, пр-т Лесі України, 26</p>
+        <ul>
+            <li><a href="#">info@devstudio.com</a></li>
+            <li><a href="#">+38 096 111 11 11</a></li>
+        </ul>
+        </address>
     </footer>
     
 </body>
