--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <header>
-        <a href="./index.html">
-            <h2><span style="color: blue;">Web</span>Studio</h2></a>
+        <a href="./index.html">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="#">Студія</a></li>
@@ -36,10 +35,16 @@
                 <li>
                     <h3>Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
                     <h3>Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
                     <h3>Планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
                     <h3>Сучасні технології</h3>
                     <p>Значимість цим проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
@@ -51,7 +56,11 @@
             <ul>
                 <li>
                     <img src="img/com.jpg" alt="Кольори кодів" width="250">
+                </li>
+                <li>
                     <img src="img/comp.jpg" alt="Розробка додатків для телефонів" width="250">
+                </li>
+                <li>
                     <img src="img/imag.jpg" alt="Написання проекту" width="250">
                 </li>
             </ul>
@@ -85,7 +94,7 @@
     </main>
 
     <footer>
-        <h2><span style="color: blue;">Web</span>Studio</h2>
+        <a href="./index.html">WebStudio</a>
         <address>
             <p>м.Київ, пр-т Лесі України, 26</p>
         <ul>
